# QTmusicplayer

./: .gitattributes  .gitignore  README.md
AppleMusic/: AppleMusic.rar  ArtistView.qml  CMakeLists.txt  ChatManager.h  ChatView.qml  DifyClient.cpp  DifyClient.h  DifyView.qml  HomeView.qml  LibraryView.qml  LyricsView.qml  Main.qml  MusicManager.cpp  MusicManager.h  MvView.qml  PlayerBar.qml  SearchView.qml  Sidebar.qml  TopBar.qml  chatclient.cpp  chatclient.h  chatmanager.cpp  chatserver.cpp  chatserver.h  chatview.h  main.cpp  merge_code.py  qml.qrc
AppleMusic/config/: dify.ini
AppleMusic/data/: music_library.db
AppleMusic/media/: Anti-Hero.lrc  Closer.lrc  Last Christmas.lrc  Something Just Like This.lrc  The Fate of Ophelia.txt  Yellow.lrc  willow.lrc  我是如此相信.lrc
